--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,13 @@
 
     <dependencyManagement>
         <dependencies>
+
+            <dependency>
+                <groupId>org.entur.helpers</groupId>
+                <artifactId>entur-google-pubsub</artifactId>
+                <version>0.0.6-SNAPSHOT</version>
+            </dependency>
+
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
@@ -412,6 +419,7 @@
         <module>organisation</module>
         <module>jms-batch</module>
         <module>hubot</module>
+        <module>entur-google-pubsub</module>
         <module>camel-entur-google-pubsub</module>
     </modules>
 </project>
