--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,7 @@
         <hazelcast.version>3.9.4</hazelcast.version>
         <activemq.version>5.15.10</activemq.version>
         <camel-version>2.24.1</camel-version>
+        <httpcomponents.version>4.5.10</httpcomponents.version>
 
         <owasp-dependency-check.version>5.2.1</owasp-dependency-check.version>
 
@@ -180,7 +181,7 @@
             <dependency>
                 <groupId>org.apache.httpcomponents</groupId>
                 <artifactId>httpclient</artifactId>
-                <version>4.5.9</version>
+                <version>${httpcomponents.version}</version>
             </dependency>
 
             <dependency>
