--- a/gcp-storage/pom.xml
+++ b/gcp-storage/pom.xml
@@ -53,7 +53,7 @@ Inspired by: https://github.com/fabric8io/ipaas-quickstarts/
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
+            <artifactId>junit-jupiter-engine</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
