--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,10 +2,10 @@ version: 2
 jobs:
   test:
     docker:
-    - image: eu.gcr.io/carbon-1287/circleci-toolbox-image-java11
+    - image: eu.gcr.io/entur-system-1287/circleci-toolbox-image-java11
       auth:
         username: _json_key
-        password: $GCLOUD_SERVICE_KEY
+        password: $DOCKER_PASSWORD
     environment:
       MAVEN_OPTS: -Xmx3G
     steps:
@@ -32,10 +32,10 @@ jobs:
         path: ~/junit
   deploy-nexus:
     docker:
-    - image: eu.gcr.io/carbon-1287/circleci-toolbox-image-java11
+    - image: eu.gcr.io/entur-system-1287/circleci-toolbox-image-java11
       auth:
         username: _json_key
-        password: $GCLOUD_SERVICE_KEY
+        password: $DOCKER_PASSWORD
     environment:
       MAVEN_OPTS: -Xmx3G
     steps:
