--- a/pom.xml
+++ b/pom.xml
@@ -21,14 +21,14 @@
     <parent>
         <groupId>org.rutebanken.superpom</groupId>
         <artifactId>superpom</artifactId>
-        <version>0.0.9-SNAPSHOT</version>
+        <version>0.0.10-SNAPSHOT</version>
     </parent>
 
     <packaging>pom</packaging>
 
     <groupId>org.entur.helpers</groupId>
     <artifactId>helper</artifactId>
-    <version>0.0.6-SNAPSHOT</version>
+    <version>0.0.7-SNAPSHOT</version>
 
     <name>rutebanken-helper</name>
     <description>Library artifacts collected and to be used as tools in other projects.</description>
@@ -68,7 +68,7 @@
         <guava.version>28.1-jre</guava.version>
         <keycloak.version>4.8.3.Final</keycloak.version>
         <spring-cloud-gcp.version>1.1.3.RELEASE</spring-cloud-gcp.version>
-        <camel.version>2.24.1</camel.version>
+        <camel.version>2.24.2</camel.version>
 
         <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
         <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
@@ -96,12 +96,11 @@
                 <version>${guava.version}</version>
             </dependency>
 
-            <!-- There exists a kubernetes-api project too. Not
-                sure about the exact differences between these two -->
+            <!--See compatibility matrix https://github.com/fabric8io/kubernetes-client#compatibility-matrix -->
             <dependency>
                 <groupId>io.fabric8</groupId>
                 <artifactId>kubernetes-client</artifactId>
-                <version>4.1.2</version>
+                <version>4.4.2</version>
             </dependency>
 
             <dependency>
