--- a/entur-google-pubsub/pom.xml
+++ b/entur-google-pubsub/pom.xml
@@ -28,6 +28,7 @@ Inspired by: https://github.com/fabric8io/ipaas-quickstarts/
 
     <properties>
         <license.licenseResolver>${project.baseUri}/../src/license</license.licenseResolver>
+        <entur.google.pubsub.emulator.download.skip>false</entur.google.pubsub.emulator.download.skip>
     </properties>
 
     <modelVersion>4.0.0</modelVersion>
@@ -83,20 +84,21 @@ Inspired by: https://github.com/fabric8io/ipaas-quickstarts/
                         <goals>
                             <goal>copy</goal>
                         </goals>
+                        <configuration>
+                            <skip>${entur.google.pubsub.emulator.download.skip}</skip>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>com.google.cloud</groupId>
+                                    <artifactId>pubsub-emulator</artifactId>
+                                    <version>0.1-SNAPSHOT</version>
+                                    <type>jar</type>
+                                    <overWrite>true</overWrite>
+                                    <outputDirectory>${project.build.directory}/pubsub-emulator</outputDirectory>
+                                </artifactItem>
+                            </artifactItems>
+                        </configuration>
                     </execution>
                 </executions>
-                <configuration>
-                    <artifactItems>
-                        <artifactItem>
-                            <groupId>com.google.cloud</groupId>
-                            <artifactId>pubsub-emulator</artifactId>
-                            <version>0.1-SNAPSHOT</version>
-                            <type>jar</type>
-                            <overWrite>true</overWrite>
-                            <outputDirectory>${project.build.directory}/pubsub-emulator</outputDirectory>
-                        </artifactItem>
-                    </artifactItems>
-                </configuration>
             </plugin>
         </plugins>
     </build>
