--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,9 @@
         <license.licenseName>eupl-1.2</license.licenseName>
         <license.licenseResolver>${project.baseUri}/src/license</license.licenseResolver>
 
+        <!-- JDK8 still needed for compatibility with Chouette -->
+        <jdk.version>8</jdk.version>
+
         <guava.version>28.1-jre</guava.version>
         <keycloak.version>4.8.3.Final</keycloak.version>
         <spring-cloud-gcp.version>1.1.3.RELEASE</spring-cloud-gcp.version>
