--- a/entur-google-pubsub/pom.xml
+++ b/entur-google-pubsub/pom.xml
@@ -22,7 +22,7 @@ Inspired by: https://github.com/fabric8io/ipaas-quickstarts/
     <parent>
         <groupId>org.entur.helpers</groupId>
         <artifactId>helper</artifactId>
-        <version>0.0.10-SNAPSHOT</version>
+        <version>1.0.1</version>
         <relativePath>..</relativePath>
     </parent>
 
@@ -71,36 +71,5 @@ Inspired by: https://github.com/fabric8io/ipaas-quickstarts/
         </dependency>
 
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>copy-pubsub-emulator</id>
-                        <phase>test-compile</phase>
-                        <goals>
-                            <goal>copy</goal>
-                        </goals>
-                        <configuration>
-                            <skip>${entur.google.pubsub.emulator.download.skip}</skip>
-                            <artifactItems>
-                                <artifactItem>
-                                    <groupId>com.google.cloud</groupId>
-                                    <artifactId>pubsub-emulator</artifactId>
-                                    <version>0.1-SNAPSHOT</version>
-                                    <type>jar</type>
-                                    <overWrite>true</overWrite>
-                                    <outputDirectory>${project.build.directory}/pubsub-emulator</outputDirectory>
-                                </artifactItem>
-                            </artifactItems>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
