--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,7 +55,7 @@ workflows:
     jobs:
     - test:
         context: org-carbon
-    - deploy-nexus:
+    - deploy-artifactory:
         context: org-carbon
         requires:
         - test
