--- a/pom.xml
+++ b/pom.xml
@@ -127,37 +127,17 @@
     </dependencyManagement>
 
     <build>
-        <extensions>
-            <!-- maven3 will need wagon-ssh extension in order to be able to release,
-            Using external variant in order to retain keys, etc -->
-            <extension>
-                <groupId>org.apache.maven.wagon</groupId>
-                <artifactId>wagon-ssh-external</artifactId>
-                <version>2.10</version>
-            </extension>
-        </extensions>
-        <pluginManagement>
-            <plugins>
-
-                <plugin>
-                    <groupId>com.amashchenko.maven.plugin</groupId>
-                    <artifactId>gitflow-maven-plugin</artifactId>
-                    <version>1.14.0</version>
-                    <configuration>
-                        <allowSnapshots>false</allowSnapshots>
-                        <gitFlowConfig>
-                            <productionBranch>add_git_tag_during_release</productionBranch>
-                            <developmentBranch>add_git_tag_during_release</developmentBranch>
-                        </gitFlowConfig>
-                    </configuration>
-
-                </plugin>
-            </plugins>
-        </pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <configuration>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                </configuration>
             </plugin>
         </plugins>
     </build>
