--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.rutebanken.superpom</groupId>
         <artifactId>superpom</artifactId>
-        <version>1.0.1</version>
+        <version>1.0.7</version>
     </parent>
 
     <packaging>pom</packaging>
@@ -78,6 +78,7 @@
         <keycloak.version>4.8.3.Final</keycloak.version>
         <spring-cloud-gcp.version>1.2.1.RELEASE</spring-cloud-gcp.version>
         <camel.version>2.25.0</camel.version>
+        <kubernetes-client.version>4.9.0</kubernetes-client.version>
 
     </properties>
 
@@ -106,7 +107,7 @@
             <dependency>
                 <groupId>io.fabric8</groupId>
                 <artifactId>kubernetes-client</artifactId>
-                <version>4.4.2</version>
+                <version>${kubernetes-client.version}</version>
             </dependency>
 
             <dependency>
