--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.rutebanken.superpom</groupId>
         <artifactId>superpom</artifactId>
-        <version>1.0.7</version>
+        <version>1.0.8</version>
     </parent>
 
     <packaging>pom</packaging>
@@ -73,6 +73,9 @@
 
         <!-- JDK8 still needed for compatibility with Chouette -->
         <jdk.version>8</jdk.version>
+        <!-- Redundant Java version setting for proper project configuration in IntelliJ -->
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
 
         <guava.version>28.1-jre</guava.version>
         <keycloak.version>4.8.3.Final</keycloak.version>
